--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "mockman-js": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hyphen": "^1.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "react-youtube": "^9.0.3",
     "uuid": "^8.3.2"
   },
   "scripts": {
